--- a/xaringan-book.tex
+++ b/xaringan-book.tex
@@ -248,7 +248,7 @@ Before we go into the details of customizing your slides, let's explore the \tex
 
 \begin{figure}
 \centering
-\includegraphics{img/02_title-slide.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_title-slide.png}
 \caption{title\_slide}
 \end{figure}
 
@@ -332,7 +332,7 @@ Feel free to copy this into your file and click ``Knit''. The output should rend
 
 \begin{figure}
 \centering
-\includegraphics{img/02_basics-slide-example.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_basics-slide-example.png}
 \caption{basics-slide-example}
 \end{figure}
 
@@ -359,7 +359,7 @@ To change the alignment of the entire slide we set some \texttt{class} paramente
 
 \begin{figure}
 \centering
-\includegraphics{img/02_basics-alignment-example_1.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_basics-alignment-example_1.png}
 \caption{basics-alignment-example\_1}
 \end{figure}
 
@@ -383,7 +383,7 @@ The second method we can use to align content is by using content classes. If yo
 
 \begin{figure}
 \centering
-\includegraphics{img/02_basics-alignment-example_2.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_basics-alignment-example_2.png}
 \caption{basics-alignment-example\_2}
 \end{figure}
 
@@ -463,7 +463,7 @@ We often need to include notes in our slides and comments in our code. In \textt
 
 \begin{figure}
 \centering
-\includegraphics{img/02_basics-comments-notes.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_basics-comments-notes.png}
 \caption{basics-comments-notes}
 \end{figure}
 
@@ -490,7 +490,7 @@ would render like this:
 
 \begin{figure}
 \centering
-\includegraphics{img/02_basics-two-column_1.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_basics-two-column_1.png}
 \caption{basic-two-column-1}
 \end{figure}
 
@@ -512,7 +512,7 @@ As you can see, this divides the left column into approxametely 1/3 of the slide
 
 \begin{figure}
 \centering
-\includegraphics{img/02_basics-two-column_2.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_basics-two-column_2.png}
 \caption{basic-two-column-2}
 \end{figure}
 
@@ -574,7 +574,7 @@ The \texttt{background-position} values refer to the respective horizontal and v
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth,height=\textheight]{img/02_basics-include-image.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_basics-include-image.png}
 \caption{basics-include-image}
 \end{figure}
 
@@ -592,12 +592,6 @@ You can make your slides fun and interactive by embedding video or even a shiny 
 \end{Highlighting}
 \end{Shaded}
 
-\begin{figure}
-\centering
-\includegraphics[width=0.5\textwidth,height=\textheight]{img/02_basics-embed-vido.png}
-\caption{basics-embed-vido}
-\end{figure}
-
 If you need to show part of a website in your presentation you can use the same strategy. For example, here I will embed the homepage of aspredicted.org:
 
 \begin{Shaded}
@@ -609,11 +603,7 @@ If you need to show part of a website in your presentation you can use the same 
 \end{Highlighting}
 \end{Shaded}
 
-\begin{figure}
-\centering
-\includegraphics[width=0.5\textwidth,height=\textheight]{img/02_basics-embed-website.png}
-\caption{basics-embed-website}
-\end{figure}
+\includegraphics[width=0.5\textwidth,height=\textheight]{img/02_basics-embed-vido.png} \includegraphics[width=0.4975\textwidth,height=\textheight]{img/02_basics-embed-website.png}
 
 It is even possible to embed a shiny app in your slides for interactive demonstrations:
 
@@ -627,7 +617,7 @@ It is even possible to embed a shiny app in your slides for interactive demonstr
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth,height=\textheight]{img/02_basics-embed-shiny.png}
+\includegraphics[width=0.75\textwidth,height=\textheight]{img/02_basics-embed-shiny.png}
 \caption{basics-embed-shiny}
 \end{figure}
 
